--- a/src/pages/search.astro
+++ b/src/pages/search.astro
@@ -59,7 +59,7 @@ import PageLayout from "../layouts/PageLayout.astro";
 </PageLayout>
 
 <script hoist type="module">
-  import Fuse from "fuse.js";
+  import Fuse from 'https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.esm.js'
   import Config from "../sarissa.config.cjs";
   import { formatDate } from "../sarissaUtils.js";
 
